--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,2 @@
-RAPIDAPI_KEY=45baf13639mshcad50b521fa0088p134c94jsn92b1f01ccadd
+RAPIDAPI_KEY=cd01b2488fmsh621eed57c4928f5p15d9c3jsncc237c271ae4
+RAPIDAPI_HOST=tennisapi1.p.rapidapi.com
